`--add-opens` jvm args for java 9+